--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ sysinfo = "0.31.2"
 tokio-util = { version = "0.7.11", features = ["compat"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 thiserror = "1.0.63"
+toml = "0.8.19"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
