--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     ]
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.37",
+    "@nextui-org/react": "^2.4.6",
     "@tauri-apps/api": "^1",
-    "antd": "^5.19.2",
+    "antd": "^5.20.3",
+    "framer-motion": "^11.3.30",
     "moment": "^2.30.1",
     "pkg": "^5.8.1",
     "puppeteer": "^22.13.1",
@@ -56,6 +59,9 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
