--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -40,6 +40,9 @@ jobs:
           node-version: lts/*
           cache: 'pnpm' # Set this to npm, yarn or pnpm.
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: install Rust stable 1.80
         uses: dtolnay/rust-toolchain@1.80
         with:
