--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,7 @@ strip = true # 删除调试符号
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "api-all"] }
+tauri = { version = "1", features = [ "api-all", "devtools"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 log = "0.4.22"
