--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,7 @@ directories = "5.0.1"
 ureq = "2.10.1"
 walkdir = "2.5.0"
 zip = "2.2.0"
+regex = "1.10.6"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.52.0"
