--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,9 +18,10 @@ strip = true # 删除调试符号
 
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
+serde_json = "1"
 
 [dependencies]
-tauri = { version = "1", features = [ "api-all", "devtools"] }
+tauri = { version = "1", features = [ "updater", "api-all", "devtools"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 log = "0.4.22"
