--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -59,12 +59,12 @@ jobs:
       - name: Build Vite + Tauri
         run: pnpm build
 
-      - name: Import Code-Signing Certificate
-        uses: apple-actions/import-codesign-certs@v3
-        if: matrix.platform == 'macos-latest'
-        with: 
-          p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
-          p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
+      # - name: Import Code-Signing Certificate
+      #   uses: apple-actions/import-codesign-certs@v3
+      #   if: matrix.platform == 'macos-latest'
+      #   with: 
+      #     p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
+      #     p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
 
       - uses: tauri-apps/tauri-action@dev
         env:
